--- a/docs/metrics/aws/s3.md
+++ b/docs/metrics/aws/s3.md
@@ -4,3 +4,24 @@
 |----------------------------------------------------------|-------------|-------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | cloudcost_aws_s3_storage_by_location_usd_per_gibyte_hour | Gauge       | Storage cost of S3 objects by region, class, and tier. Cost represented in USD/(GiB*h)    | `region`=&lt;AWS region&gt; <br/> `class`=&lt;[AWS S3 storage class](https://aws.amazon.com/s3/storage-classes/)&gt;                                                                                |
 | cloudcost_aws_s3_operation_by_location_usd_per_krequest  | Gauge       | Operation cost of S3 objects by region, class, and tier. Cost represented in USD/(1k req) | `region`=&lt;AWS region&gt; <br/> `class`=&lt;[AWS S3 storage class](https://aws.amazon.com/s3/storage-classes/)&gt; <br/> `tier`=&lt;[AWS S3 request tier](https://aws.amazon.com/s3/pricing/)&gt; |
+
+## IAM Permissions
+
+Required permissions for S3 metrics collection:
+
+```json
+{
+    "Version": "2012-10-17",
+    "Statement": [
+        {
+            "Effect": "Allow",
+            "Action": [
+                "ce:GetCostAndUsage"
+            ],
+            "Resource": "*"
+        }
+    ]
+}
+```
+
+**Note:** S3 metrics are collected via AWS Cost Explorer API, not direct S3 API calls. The exporter queries historical billing data to determine storage and operation costs.
